@@ -5,7 +5,9 @@
 cawk is Copyright (C) 2024 by Cedric Llorens
 
 v1.1.0 (?):
-	- add new suppliers for future tests and add os for each scope
+	- add new suppliers for future tests and add os suffix for each scope
+	- add view per scope thanks to <supplier=> variable called with view target
+	  gmake view supplier=cisco-ios (or juniper-junos, etc.)
 
 v1.0.0 (february 2024): initial version
 	- basis tests covering cisco-ios, huawei, fortiner, juniper-junos
